maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:4: error: value ||! is not a member of Boolean
  while(!estSurBiscuit() ||!porteBiscuit()){
                         ^IslandMaze:9: error: not found: value estSurBiscui
    if(estSurBiscui()){
       ^